@@ -77,13 +77,6 @@ static const HKEY registry_keys[] =
 
 static const int ROOT_KEY_COUNT = sizeof (registry_keys) / sizeof (HKEY);
 
-#ifndef __MINGW64_VERSION_MAJOR
-extern "C" {
-  LONG WINAPI RegOpenUserClassesRoot (HANDLE, DWORD, REGSAM, PHKEY);
-  LONG WINAPI RegOpenCurrentUser (REGSAM, PHKEY);
-};
-#endif
-
 /* Make sure to access the correct per-user HKCR and HKCU hives, even if
    the current user is only impersonated in another user's session. */
 static HKEY
