@@ -1481,10 +1481,6 @@ fhandler_pty_slave::fixup_after_exec ()
     fixup_after_fork (NULL);
 }
 
-#ifndef __MINGW64_VERSION_MAJOR
-extern "C" BOOL WINAPI GetNamedPipeClientProcessId (HANDLE, PULONG);
-#endif
-
 /* This thread function handles the master control pipe.  It waits for a
    client to connect.  Then it checks if the client process has permissions
    to access the tty handles.  If so, it opens the client process and
